--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API Sign In & Sign Up Reference Dating App",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
+    "start": "node",
+    "dev": "nodemon",
     "test": "jest"
   },
   "keywords": [
